Fix text aligning of contact text

--- a/style.css
+++ b/style.css
@@ -114,7 +114,7 @@ h1 {
 
 #contact p {
     width: 400px;
-    text-align: center;
+    text-align: justify;
     margin-bottom: 2rem;
     font-size: 1rem;
     font-family: 'Open Sans', sans-serif;
